# dotfiles

./: .gitignore  .gitmodules  LICENSE  Main.hs  README.md  bash_profile  bashrc  common.sh  default.nix  dotfiles.cabal  gitconfig  gitignore  install-apt-dependencies.sh  install.sh  logging.sh  ls-output.htm  make-symlinks.sh  shell.nix  stack.yaml  tmux.conf  vimrc
Dotfiles/: Core.hs  Git.hs  Packages.hs  PostInstall.hs  Print.hs  Process.hs  Symlink.hs
config/i3/: config
config/i3status/: config
config/nvim/: .netrwhist  ginit.vim  init.vim
config/terminator/: config
emacs.d/: .gitignore  init.el
lib/: GithubMod.terminal  install-nvm.sh  remap-capslock-to-ctrl.scpt
linux-dotfiles/: .xinitrc  Xmodmap  bash_aliases  bashrc
linux-scripts/: install-fonts.sh  install-packages.sh  post-install.sh
osx-dotfiles/: bashrc
osx-dotfiles/tmuxinator/: codescene.yml  dataflow.yml  jsont.yml  lifelog-auth.yml  lifelog-card-templates.yml  lifelog-connected-apps.yml  lifelog-dashboard.yml  lifelog-docs.yml  lifelog-gordias.yml  meet.yml  (+25 more)
osx-scripts/: install-packages.sh  post-install.sh  remap-capslock-to-ctrl.scpt
shared-dotfiles/: alacritty.yml  authinfo.gpg  ghc-pkg-functions.sh  ghci  git_aliases  gitconfig  gitignore  gnus  gvimrc  lessfilter  tmate.conf  tmux.conf  vim-simple  vimrc
shared-scripts/: post-install.sh
src/: Main.hs
ubuntu-dotfiles/: Xmodmap  bash_aliases  bashrc
ubuntu-scripts/: compile-command-t.sh  install-packages.sh  install-rvm.sh  post-install.sh  setup-gnome-terminal-theme.sh
vim/: .VimballRecord  .netrwhist  init.vim  vim
(+77 files in other folders)
